compiler/acton/test/syntaxerrors/err35.act
# Actor with invalid method definition
actor MyActor:
    def